# parallel_computing

cuda-examples/: CMakeLists.txt
cuda-examples/include/: kernels.cuh  timer.h
cuda-examples/src/: BlurKernel.cu  ConvKernel.cu  Histogram.cu  MatrixMulKernel.cu  ReductionKernel.cu  ScanKernel.cu  VecAdd.cu  main.cpp  timer.cpp
openmp/: a.out  openmp_loop.cpp  openmp_parallel.cpp
openmpi/: a.out  barrier.c  readme.md  ring.c  send_recv.c
simd_vectorization/: auto_vectorization.c  hints_vectorization.c  intrinsics_vectorization.c
threading/c++/: DiningPhilosophers.cpp  ProducerConsumer.cpp  ProducerConsumerWithSemaphore.cpp  ReadersAndWriters.cpp  a.out
